Added recursive parameter to HTTP delete request
